--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,47 @@
 <resources>
-    <string name="app_name">Kotlin_Mvvm</string>
+    <!-- 全局 -->
+    <string name="app_name">Eyepetizer</string>
+    <string name="homepage">首页</string>
+    <string name="community">社区</string>
+    <string name="notification">通知</string>
+    <string name="mine">我的</string>
+    <string name="discovery">发现</string>
+    <string name="commend">推荐</string>
+    <string name="daily">日报</string>
+    <string name="follow">关注</string>
+    <string name="push">推送</string>
+    <string name="interaction">互动</string>
+    <string name="inbox">私信</string>
+
+    <string name="open">打开</string>
+    <string name="close">关闭</string>
+    <string name="ok">确定</string>
+    <string name="cancel">取消</string>
+    <string name="delete">删除</string>
+    <string name="settings">设置</string>
+    <string name="share">分享</string>
+    <string name="search">搜索</string>
+    <string name="advert">广告</string>
+    <string name="reply">回复</string>
+    <string name="plus_follow">+关注</string>
+    <string name="unknown_error">发生未知错误</string>
+    <string name="show_conversation">查看对话</string>
+    <string name="srl_footer_nothing">没有更多数据了</string>
+    <string name="press_again_to_exit">再按一次退出%1$s</string>
+    <string name="build_type">build_type:%1$s</string>
+    <string name="channel">channel:%1$s</string>
+    <string name="version_name">version_name:%1$s</string>
+    <string name="currently_not_supported">该功能即将开放，敬请期待</string>
+    <string name="jump_page_unknown_error">跳转界面出现未知异常</string>
+    <string name="your_phone_does_not_install_qq">您的手机还没有安装QQ</string>
+    <string name="your_phone_does_not_install_wechat">您的手机还没有安装微信</string>
+    <string name="your_phone_does_not_install_weibo">您的手机还没有安装微博</string>
+    <string name="your_phone_does_not_install_qq_zone">您的手机还没有安装QQ空间</string>
+    <string name="request_permission_picture_processing">需要存储权限来处理您的图片信息</string>
+    <string name="request_permission_access_phone_info">开眼视频推荐和观看记录等功能，需要访问手机识别码等信息</string>
+    <string name="slogan">- Your contribution is highly appreciated! -</string>
+    <string name="slogan_two">Daily appetizersfor your eyes. Bon eyepétit.</string>
+    <string name="slogan_description">让每一个人都开眼，开了又开。</string>
+    <string name="slogan_description_two">每日精选视频推介，让你大开眼界。</string>
+    <string name="footer_not_more">- The End -</string>
 </resources>
